remote debug with delve in backend api 1

--- a/charts/backend-api-1/templates/deployment.yaml
+++ b/charts/backend-api-1/templates/deployment.yaml
@@ -32,7 +32,10 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
-        - containerPort: 3000
+        - name: api
+          containerPort: 3000
+        - name: debug
+          containerPort: 2345
         env:
 {{- toYaml .Values.envs | nindent 8 }}
 
